--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
-	"ip":"example.aternos.ip",
-	"port": "25565",
-	"name": "afkbot1",
+	"ip":"AR_ADITYA_GAMING.aternos.me
+Connect",
+	"port": "53265",
+	"name": "24/7",
 	"auto-night-skip":"true"
 }
