--- a/config.json
+++ b/config.json
@@ -1,6 +1,5 @@
 {
-	"ip":"AR_ADITYA_GAMING.aternos.me
-Connect",
+	"ip":"AR_ADITYA_GAMING.aternos.me",
 	"port": "53265",
 	"name": "24/7",
 	"auto-night-skip":"true"
